feat: Implement photo picker with Peekaboo library
- Add Peekaboo dependencies for cross-platform image picking and camera
- Remove JVM target from shared module (mobile-only app)
- Create PhotoSelectionViewModel for state management
- Replace custom PhotoPicker interface with Peekaboo integration
- Add Android permissions (CAMERA, READ_EXTERNAL_STORAGE, READ_MEDIA_IMAGES)
- Add iOS permissions (NSCameraUsageDescription, NSPhotoLibraryUsageDescription)
- Add FileProvider configuration for Android camera
- Integrate Peekaboo gallery launcher and camera state with UI
- Add CameraScreen with permission denied handling
- Update PhotoSelectionScreen to use real photo picker functionality

Platform-specific features:
- Android: ActivityResultContracts through Peekaboo
- iOS: PHPickerViewController and UIImagePickerController through Peekaboo
- Cross-platform: Single API for gallery and camera access

UI improvements:
- Real photo selection from gallery (multiple photos)
- Camera integration with native UI
- Photo removal functionality
- Loading states and error handling
- Enable/disable continue button based on photo selection

Tested successfully on Android emulator and iOS simulator with permissions.

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -4,5 +4,15 @@
 <dict>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	
+	<!-- Permissions для камеры и фотогалереи -->
+	<key>NSCameraUsageDescription</key>
+	<string>Приложение использует камеру для создания фотографий персонажей комиксов</string>
+	
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Приложение получает доступ к галерее для выбора фотографий персонажей</string>
+	
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Приложение может сохранять созданные комиксы в галерею</string>
 </dict>
 </plist>
